--- a/layouts/partials/footer/footer.html
+++ b/layouts/partials/footer/footer.html
@@ -19,6 +19,6 @@
 
         {{ T "footer.builtWith" (dict "Generator" $Generator) | safeHTML }} <br />
         {{ T "footer.designedBy" (dict "Theme" $Theme "DesignedBy" $DesignedBy) | safeHTML }} <br />
-        <span id="busuanzi_container_site_pv" style="display: none"><span id="busuanzi_value_site_pv"></span> views</span>
+        <span id="busuanzi_container_site_pv" style="display: none"><span id="busuanzi_value_site_pv"></span> views | <span id="busuanzi_value_site_uv"></span> visitors</span>
     </section>
 </footer>
